# src/main/openapi/api.yaml
@@ -12,32 +12,6 @@ info:
     name: MIT License
     url: https://opensource.org/licenses/MIT
 paths:
-  /applications/:
-    get:
-      tags:
-        - Applications
-      responses:
-        "200":
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ApplicationsResponse'
-          description: Get Applications
-    post:
-      requestBody:
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/ApplicationRequest'
-      tags:
-        - Applications
-      responses:
-        "200":
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ApplicationResponse'
-          description: Create Application
   /applications/{applicationId}:
     get:
       tags:
@@ -124,33 +98,6 @@ paths:
           type: string
         in: path
         required: true
-  /clients:
-    get:
-      tags:
-        - Clients
-      responses:
-        "200":
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ClientsResponse'
-          description: Gets a list of clients.
-    post:
-      requestBody:
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/ClientRequest'
-        required: true
-      tags:
-        - Clients
-      responses:
-        "200":
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ClientResponse'
-          description: Creates a new client.
   /clients/{clientId}:
     get:
       tags:
@@ -273,33 +220,6 @@ paths:
       responses:
         "204":
           description: Delete an Authorization Server.
-  /users/:
-    get:
-      tags:
-        - Users
-      responses:
-        "200":
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/UsersResponse'
-          description: Get a list of User.
-    post:
-      requestBody:
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/UserRequest'
-        required: true
-      tags:
-        - Users
-      responses:
-        "200":
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/UserResponse'
-          description: Create a User.
   /{authorizationServerId}/.well-known/openid-connect/:
     get:
       tags:
@@ -586,6 +506,113 @@ paths:
           type: string
         in: query
         required: true
+  /applications/:
+    get:
+      tags:
+        - Applications
+      parameters:
+        - name: authorizationServerId
+          description: ""
+          schema:
+            type: array
+            items:
+              format: UUID
+              type: string
+          in: query
+      responses:
+        "200":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ApplicationsResponse'
+          description: Get Applications
+    post:
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/ApplicationRequest'
+      tags:
+        - Applications
+      responses:
+        "200":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ApplicationResponse'
+          description: Create Application
+  /clients:
+    get:
+      tags:
+        - Clients
+      parameters:
+        - name: authorizationServerId
+          description: ""
+          schema:
+            type: array
+            items:
+              format: UUID
+              type: string
+          in: query
+      responses:
+        "200":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ClientsResponse'
+          description: Gets a list of clients.
+    post:
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/ClientRequest'
+        required: true
+      tags:
+        - Clients
+      responses:
+        "200":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ClientResponse'
+          description: Creates a new client.
+  /users/:
+    get:
+      tags:
+        - Users
+      parameters:
+        - name: authorizationServerId
+          description: ""
+          schema:
+            type: array
+            items:
+              format: UUID
+              type: string
+          in: query
+      responses:
+        "200":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/UsersResponse'
+          description: Get a list of User.
+    post:
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/UserRequest'
+        required: true
+      tags:
+        - Users
+      responses:
+        "200":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/UserResponse'
+          description: Create a User.
 components:
   schemas:
     WellKnown:
@@ -1226,3 +1253,42 @@ components:
       example:
         username: test@acme.co
         password: test
+    ApplicationRequestFilter:
+      title: Root Type for ApplicationRequestFilter
+      description: ""
+      type: object
+      properties:
+        authorizationServerIds:
+          type: array
+          items:
+            format: UUID
+            type: string
+      example:
+        authorizationServerIds:
+          - f06618ae-0569-4c6c-a0ad-147e07506229
+    ClientRequestFilter:
+      title: Root Type for ApplicationRequestFilter
+      description: ""
+      type: object
+      properties:
+        authorizationServerIds:
+          type: array
+          items:
+            format: UUID
+            type: string
+      example:
+        authorizationServerIds:
+          - f06618ae-0569-4c6c-a0ad-147e07506229
+    UserRequestFilter:
+      title: Root Type for ApplicationRequestFilter
+      description: ""
+      type: object
+      properties:
+        authorizationServerIds:
+          type: array
+          items:
+            format: UUID
+            type: string
+      example:
+        authorizationServerIds:
+          - f06618ae-0569-4c6c-a0ad-147e07506229
